# faktaark-extract

./: .copier-answers.yml  .env.example  README.md  extract.py  main.py  pyproject.toml
