
[project]
authors = [
  {name = "ninanor", email = "ninanor@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "dlt[filesystem]>=1.24.0",
  "pyarrow>=23.0.1",
  "typer>=0.24.1",
]
description = "Fetch naturtype faktaark from Miljødirektoratet ArcGIS REST API and write to parquet."
license = "GPL-3.0+"
name = "faktaark"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"


[project.scripts]
faktaark = "main:start"

[dependency-groups]
dev = [
  "deptry",
]

[tool.deptry]
known_first_party = ["src"]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
